@@ -54,6 +54,7 @@ GetOptions(
     'ocsv=s'                      => \my $out_csv,                             # string
     'ojsonf=s'                    => \my $out_jsonf,                           # string
     'ojsonld=s'                   => \my $out_jsonld,                          # string
+    'oomop=s'                     => \my $out_omop,                            # string
     'out-dir=s'                   => \$out_dir,                                # string
     'help|?'                      => \my $help,                                # flag
     'man'                         => \my $man,                                 # flag
@@ -182,6 +183,7 @@ my $out_file =
   : $out_csv    ? catfile( $out_dir, $out_csv )
   : $out_jsonf  ? catfile( $out_dir, $out_jsonf )
   : $out_jsonld ? catfile( $out_dir, $out_jsonld )
+  : $out_omop ? catfile( $out_dir, $out_omop) 
   :               catfile( $out_dir, 'individuals.json' );
 
 # Defining $log_file
@@ -203,6 +205,7 @@ my $out_type =
   : $out_csv    ? 'csv'
   : $out_jsonf  ? 'jsonf'
   : $out_jsonld ? 'jsonld'
+  : $out_omop ? 'omop'
   :               'bff';
 my $method = $in_type . '2' . $out_type;
 
@@ -307,6 +310,20 @@ sub convert {
                     data     => $data,
                 }
             );
+        } elsif( $method eq 'bff2omop') {
+
+         for my $table ( keys %$data ) {
+    my $filepath = catfile($o_file."_$table.csv");
+    # Extract headers from the first row (or define a fixed header order)
+    my @headers = sort keys %{ $data->{$table}[0] };
+    write_csv({
+        sep      => ";",       # or the separator your CSV requires
+        filepath => $filepath,
+        headers  => \@headers,
+        data     => $data->{$table},  # array-of-hashes
+    });
+}
+
         }
         else {
             io_yaml_or_json(
@@ -662,7 +679,8 @@ Then I will do something like this:
 
 =head3 System requirements
 
-  * Ideally a Debian-based distribution (Ubuntu or Mint), but any other (e.g., CentOs, OpenSuse, MacOS) should do as well.
+  - OS/ARCH supported: B<linux/amd64> and B<linux/arm64>.
+  - Ideally a Debian-based distribution (Ubuntu or Mint), but any other (e.g., CentOS, OpenSUSE) should do as well (untested).
     (It should also work on macOS and Windows Server, but we are only providing information for Linux here)
   * Perl 5 (>= 5.26 core; installed by default in most Linux distributions). Check the version with "perl -v".
   * >= 4GB of RAM
