@@ -156,7 +156,7 @@ sub do_omop2bff {
 }
 
 ################################################################################
-# Private Methods
+# Private conversion subs
 ################################################################################
 
 sub _map_person {
