@@ -52,7 +52,7 @@ id:
 
 # Term: info
 info:
- fields: [study_id,dob,diet,redcap_event_name,age,first_name,last_name,consent,consent_date,consent_noneu,consent_devices,consent_recontact,consent_week2_endo,education,zipcode,consents_and_demographics_complete]
+ fields: []
 
 # Term: measures
 measures:
